JumpScript/tests/baselines/reference/unusedLocalsinConstructor2.errors.txt
tests/cases/compiler/unusedLocalsinConstructor2.jump(3,13): error TS6133: 'unused' is declared but its value is never read.


==== tests/cases/compiler/unusedLocalsinConstructor2.jump (1 errors) ====
    class greeter {
        constructor() {
            var unused = 20;
                ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
            var used = "dummy";
            used = used + "second part";
        }
    }